// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates SubaccountSection on create should render radio group 1`] = `
<Fragment>
  <div>
    <Field
      component={[Function]}
      label="Subaccount Assignment"
      name="assignTo"
      options={
        Array [
          Object {
            "label": "Assign to Master Account",
            "value": "master",
          },
          Object {
            "label": "Share with all Subaccounts",
            "value": "shared",
          },
          Object {
            "label": "Assign to Subaccount",
            "value": "subaccount",
          },
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`Templates SubaccountSection on create should render subaccount typeahead 1`] = `
<Field
  component={[Function]}
  helpText="This assignment is permanent."
  name="subaccount"
  validate={[Function]}
/>
`;

exports[`Templates SubaccountSection on edit should render a disabled subaccount field 1`] = `
<Fragment>
  <Field
    component={[Function]}
    disabled={true}
    helpText="This assignment is permanent."
    label="Subaccount"
    name="subaccount"
  />
</Fragment>
`;

exports[`Templates SubaccountSection on edit should render toggle block if not assigned to subaccount 1`] = `
<Fragment>
  <Field
    component={[Function]}
    label="Share with all subaccounts"
    name="shared_with_subaccounts"
    parse={[Function]}
    type="checkbox"
  />
</Fragment>
`;
